# log-grinder

./: CMakeLists.txt
include/: console_setup.hpp  draw.hpp  input_manager.hpp  moneylog.hpp  monitor_log.hpp  timer.hpp
src/: draw.cpp  input_manager.cpp  main.cpp  moneylog.cpp  monitor_log.cpp  timer.cpp
